# AudioProjectTest

./: .clang-format  .gitignore  AudioProjectTest.sln  README.md
AudioProjectTest/: AudioProjectTest.vcxproj  AudioProjectTest.vcxproj.filters  CMakeLists.txt
AudioProjectTest/notes/: AVX2.md  Notes.md  Plan.md  Setup.md  Snippets.md  Todo 2.md  Todo.md
AudioProjectTest/old/: .clang-format.nothanks  AudioAnalyzerOLD.cpp  AudioAnalyzerOLD.h  DiagnosticsOLD.cpp  DiagnosticsOLD.h  FftwOLD.cpp  FftwOLD.h  LoggingOLD.cpp  LoggingOLD.h  Old.md
AudioProjectTest/scripts/: LinuxBuild.sh  PreBuild.bat  VSWinPreBuild.bat
AudioProjectTest/src/: AudioAnalyzer.cpp  AudioAnalyzer.h  Avx2.h  Diagnostics.cpp  Diagnostics.h  Fftw.cpp  Fftw.h  Logging.cpp  Logging.h  Main.cpp  VoiceDetector.cpp  VoiceDetector.h  Windowing.cpp  Windowing.h
